Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-14587

(lproc_ptlrpc.c:606:ptlrpc_lprocfs_nrs_seq_show()) LBUG

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.12.8, Lustre 2.15.0
    • Lustre 2.12.5
    • None
    • 3
    • 9223372036854775807

      We are using tbf and hit this lbug.

      [1816481.910650] LustreError: 17747:0:(lproc_ptlrpc.c:606:ptlrpc_lprocfs_nrs_seq_show()) ASSERTION( strncmp(infos[pol_idx].pi_arg, tmp.pi_arg, sizeof(tmp.pi_arg)) == 0 ) failed: 
      [1816481.957475] LustreError: 17747:0:(lproc_ptlrpc.c:606:ptlrpc_lprocfs_nrs_seq_show()) LBUG
      

            flei Feng Lei
            mhanafi Mahmoud Hanafi
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: